<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="barcode">Barcode</string>
	<string name="menu_userInfo">User Info</string>
	<string name="menu_dietInfo">Diet Info</string>
	<string name="menu_metricsInfo">Body Metrics</string>
	<string name="menu_food">Food</string>
	<string name="menu_authenticate">Authenticate</string>
	<string name="app_name">BurnBot</string>
	<string name="consumer_key">1YHdpiXLKmueriS5v7oS2w</string>
	<string name="consumer_secret">7SgQOoMQ2SG5tRPdQvvMxIv9Y6BDeI1ABuLrey6k</string>
	<string name="requestTokenEndpointUrl">http://dailyburn.com/api/oauth/request_token</string>
	<string name="accessTokenEndpointUrl">http://dailyburn.com/api/oauth/access_token</string>
	<string name="authorizationWebsiteUrl">http://dailyburn.com/api/oauth/authorize</string>
	<string name="callbackUrl">dailyburndroid://com.nicknackhacks.dailyburndroid/</string>
	<string name="main_no_food_items">No Food Items to display</string>
	<string name="main_no_exercise_sets">No Exercise sets to display</string>
	<string name="main_no_entries">No Entries to display</string>
	<string name="main_no_metrics">No Metrics to display</string>
	<string name="add_to_favorites">Add to Favorites</string>
	<string name="create_metric_entry">Create entry</string>
	<string name="delete_entry">Delete Entry</string>
	<string name="ate_this">I ate this</string>
	<string name="servings_eaten">Servings eaten:</string>
	<string name="date_eaten">Date eaten:</string>
	<string name="meal_type_label">Meal:</string>
	<string name="food_name_label">Food:</string>
	<string name="exception">Exception</string>
	<string name="ok">OK</string>
	<string name="pick_meals">Pick a meal</string>
	<string name="change_date">Change the Date</string>
	<string name="flurry_key">9DE23A9LHKZFYZKYK26R</string>
	<string name="flurry_dialog_title">Flurry Analytics</string>
	<string name="flurry_dialog_message">
		Would you like to enable Flurry Analytics? This service collects anonymous usage stats to help me better understand which features are most used.
	</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>		
	
    <string name="dashboard_food">Food</string>
    <string name="dashboard_body">Body</string>
    <string name="dashboard_profile">Profile</string>
    <string name="description_refresh">Refresh</string>
    <string name="search_hint">Search for food</string>
    <string name="search_hint_speech">Speak the food name</string>
    <string name="adsense_keywords">calories,nutrition,health,exercise,fitness,lose+weight,weight+loss,food+weight+loss+programs</string>
</resources>
