<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout 
		android:id="@+id/bottom_ad_bar"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
		<com.google.ads.GoogleAdView
    		android:id="@+id/adview"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout
		style="@style/ActionBar"
		android:id="@+id/actionbar" 
		android:layout_marginBottom="0dp">
        <ImageView style="@style/ActionBarLogo" />
        
        <View style="@style/Spring" />
    
	    <ImageView style="@style/ActionBarSeparator" />
	    <ImageButton style="@style/ActionBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefresh" />
        <ProgressBar style="@style/ActionBarSpinner"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />            
    </LinearLayout>
	<LinearLayout
		android:id="@+id/upper_change_date"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/actionbar"
		android:background="#ff002943"
		android:visibility="visible">
		<Button
	    	android:id="@+id/change_date_button"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/change_date"
    		android:onClick="onClickChangeDate"/>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
   		android:layout_width="fill_parent"
   		android:layout_height="0dip"
   		android:layout_below="@id/upper_change_date"
   		android:layout_above="@id/bottom_ad_bar">
		<ListView
    		android:id="@+id/android:list"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"/>
		<TextView
    		android:id="@+id/android:empty"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:text="@string/main_no_exercise_sets"/>
	</LinearLayout>
</RelativeLayout>