<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout 
    	style="@style/ActionBar"
        android:id="@+id/actionbar" >
        <ImageView style="@style/ActionBarLogo" />
        
        <View style="@style/Spring" />
    
        <ImageView style="@style/ActionBarSeparator" />
        <ImageView style="@style/ActionBarAction"
            android:src="@drawable/search"
            android:id="@+id/ab_search"/>
    
        <ImageView style="@style/ActionBarSeparator" />
        <ImageView style="@style/ActionBarAction"
            android:src="@drawable/barcode"
            android:id="@+id/ab_barcode" />
    </LinearLayout>
    
    <LinearLayout style="@style/Dashboard">
	    <LinearLayout style="@style/DashboardRow">
	            
	        <Button android:id="@+id/main_button_food"
		        style="@style/DashboardButton"
		        android:onClick="onClickFoodButton"
	            android:drawableTop="@drawable/nutrition_btn"
	            android:text="@string/menu_food" />
	            
	        <Button android:id="@+id/main_button_metrics"
	            style="@style/DashboardButton"
	            android:onClick="onClickMetricsButton"
	            android:drawableTop="@drawable/metrics_btn"
	            android:text="@string/menu_metricsInfo" />
	        
	    </LinearLayout>
	    
	    <LinearLayout style="@style/DashboardRow">
                
            <Button
                style="@style/DashboardButton"
                android:id="@+id/main_button_user"
                android:onClick="onClickUserButton"
                android:drawableTop="@drawable/user_btn"
                android:text="@string/menu_userInfo" />
                
            <Button
                style="@style/DashboardButton"
                android:id="@+id/main_button_auth"
                android:onClick="onClickAuthButton"
                android:drawableTop="@drawable/auth_btn"
                android:text="@string/menu_authenticate" />
            
	    </LinearLayout>
    </LinearLayout>
        <LinearLayout
        android:id="@+id/now_playing_loading"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/now_playing_height"
        android:orientation="horizontal"
        android:background="#eee"
        android:gravity="center">
        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dip"
            android:indeterminate="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/now_playing_loading"/>
    </LinearLayout>
    
<!--    <com.admob.android.ads.AdView-->
<!--    	xmlns:myapp="http://schemas.android.com/apk/res/com.nicknackhacks.dailyburn"-->
<!--		android:id="@+id/ad" -->
<!--		android:layout_width="fill_parent"-->
<!--		android:layout_height="wrap_content"-->
<!--		android:layout_alignParentBottom="true"	-->
<!--		myapp:backgroundColor="#000000"-->
<!--		myapp:primaryTextColor="#FFFFFF" -->
<!--		myapp:secondaryTextColor="#CCCCCC" />-->
</LinearLayout>